# FooBarTask

./: DockerfileFront  DockerfileIsDivisibleBy3  DockerfileIsDivisibleBy35  DockerfileIsDivisibleBy3535  DockerfileIsDivisibleBy5  README.md  div5.py  docker-compose-test-grafana.yaml  docker-compose.yaml  frontend.py  is_divisible_by_3.py  is_divisible_by_35.py  is_divisible_by_3535.py  pyproject.toml  structlogging.py
