[tool.poetry]
name = "foobartask"
version = "0.1.0"
description = "yandex exam))"
authors = ["Raidzin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
httpx = "^0.24.0"
uvicorn = "^0.22.0"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
