[tool.poetry]
name = "foobartask"
version = "0.1.0"
description = "yandex exam))"
authors = ["Raidzin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
httpx = "^0.24.0"
uvicorn = "0.20.0"
flask = "^2.3.2"
structlog = "^23.1.0"
gunicorn = "^20.1.0"


[tool.poetry.group.frontend.dependencies]
nicegui = "^1.2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
